Working on adding sdk

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="The web site for Bluebonnet Records in Lockhart, TX">
     <meta name="keywords" content="Records, Record, Store, LP, Albums, Lockhart, Austin, Texas, TX, Music">
     <link rel="stylesheet" href="index.css" type="text/css">
+    <script src="./config.js" type="module"></script>'
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js"></script> <!--Fetch -->
+    <script src="https://unpkg.com/dropbox/dist/DropboxTeam-sdk.min.js" type="module"></script>
   </head>
   <body>
     <main> <!--Putting some padding on this so everything is off the edges and together-->
@@ -16,5 +19,6 @@
       <!--Content on bottom goes here--> 
 
     </main>
+    <script src='./index.js' type='module'></script>
   </body>
 </html>
